Commit after tutorial

--- a/data/VN_StatsDisplay.html
+++ b/data/VN_StatsDisplay.html
@@ -8,23 +8,23 @@
     </head>
     <body id="body">
         <div id="stats_summary">
-            <h1 id="heading">Six Degrees of Kevin Bacon (Oscars Edition) - Game Session Stats</h1>
+            <h1 id="heading">Six Degrees of Kevin Bacon (Phien Ban Oscars) - Thong so: </h1>
             <hr />
             <table style="border:0px">
                 <tr style="text-align:left">
-                    <td class="bold">Games Played: </td>
-                    <td id="games_played" style="text-align:left">0</td>
+                    <td class="bold">Van da choi: </td>
+                    <td id="games_played" style="text-alig:left">0</td>
                 </tr>
                 <tr>
-                    <td class="bold">Wins: </td>
+                    <td class="bold">Thang: </td>
                     <td id="wins">0</td>
                 </tr>
                 <tr>
-                    <td class="bold">Perfect Wins: </td>
+                    <td class="bold">Thang nhanh: </td>
                     <td id="perfect_wins">0</td>
                 </tr>
                 <tr>
-                    <td class="bold">Losses: </td>
+                    <td class="bold">Thua: </td>
                     <td id="losses">0</td>
                 </tr>
             </table>
