--- a/data/EN_GameDisplay.html
+++ b/data/EN_GameDisplay.html
@@ -9,7 +9,7 @@
         <div>
             <h2 id="subheader_text"></h2>
             <ol id="guesses_list" style="font-size:16pt; font-style: bold; color:blue"></ol>
-            <h2 id="win_display" style="color:red"></h2>
+            <h2 id="win_display" style="color:red" text-align="left"></h2>
         </div>  
     </body>
 </html>
